--- a/final.Rmd
+++ b/final.Rmd
@@ -27,11 +27,19 @@ library(ggplot2)
 
 ## Overview:
 
-Establish if there is a causal effect of smoking during pregnancy on the risk of the child being born with low birth weight (below 2500 grams) by analysing the data using logistic regression, including the right covariates in the model to be able to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight of the child.
+Research question : *Is there a causal effect of smoking during pregnancy on the risk of the child being born with low birth weight (below 2500 grams)?* 
 
-## Description Statistics:
+Analyse the data using logistic regression, include the right covariates in the model to be able to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight of the child by using the Directed Acyclic Graph (DAG) and interpret the results to answer the research question.
 
-The descriptive statistics of the dataset are presented below. The dataset contains information about the birth weight of children and various other variables such as smoking during pregnancy, birth order of the child, age of the mother, systolic blood pressure before pregnancy, birth weight of the child, preterm birth, and child's requirement of neonatal care. - The birth weight of the child is categorized as low if it is below 2500 grams. - The high systolic blood pressure is categorized as high if it is above 135 mmHg.
+Let's start by loading the dataset and performing some initial data exploration.
+
+But, before that let's clean and prepare the data to make sure that meaningful analysis can be performed on it.
+
+## Data Cleanup:
+
+-   The variable id was a sequence number randomly assigned to each woman, and is removed as it is not relevant for the analysis.
+-   There were NA values found in the birthweight_analysis dataset which were removed to ensure that the analysis is performed on complete data.
+-   There was a negative value found in the variable 'bp_sys' in the birthweight_original dataset which was removed as it was not possible to have a negative systolic blood pressure value.
 
 ### Code:
 
@@ -40,92 +48,125 @@ The descriptive statistics of the dataset are presented below. The dataset conta
 birthweight_original <- read.csv("birthweight_original.csv")
 birthweight_analysis <- read.csv("birthweight_analysisdata.csv")
 
+# Remove the id variable
+birthweight_original <- birthweight_original[, -c(5)]
+birthweight_analysis <- birthweight_analysis[, -c(5)]
+# Remove any NA values
+birthweight_original <- na.omit(birthweight_original)
+birthweight_analysis <- na.omit(birthweight_analysis)
+
+# Remove negative values in bp_sys
+birthweight_original <- birthweight_original[birthweight_original$bp_sys > 0, ]
+```
+
+
+## Description Statistics:
+
+Now, let us preform the descriptive statistics of the dataset to understand the distribution of variables and identify any patterns or trends that may be relevant for the analysis.
+
+The birth weight datasets contain information about the birth weight of children, smoking during pregnancy and various other variables such as birth order of the child, age of the mother, systolic blood pressure before pregnancy, birth weight of the child, preterm birth, and child's requirement of neonatal care. 
+
+In the birth weight analysis dataset, the variables are categorized as follows:
+
+- The birth weight of the child is categorized as low if it is below 2500 grams. 
+- The high systolic blood pressure is categorized as high_bp if it is above 135 mmHg.
+
+### Code:
+
+```{r}
 # Define the variables
 table1_vars <- c("birth", "smoke", "age", "bwt", "bp_sys", "preterm", "neocare")
+table2_vars <- c("birth", "smoke", "age", "low", "high_bp", "preterm", "neocare")
 
 # Create table for descriptive statistics: using table one package
 table1 <- CreateTableOne(vars = table1_vars, data = birthweight_original, 
                          factorVars = c("birth", "smoke", "preterm", "neocare"))
 
-table2_vars <- c("birth", "smoke", "age", "low", "high_bp", "preterm", "neocare")
 table2 <- CreateTableOne(vars = table2_vars, data = birthweight_analysis, 
           factorVars = c("birth", "smoke", "low", "high_bp", "preterm", "neocare"))
 ```
 
 ### Output:
 
-Here's the descriptive Statistics of Birth weight Original Data set:
+Here's the Descriptive Statistics of Birth weight Original Data set:
 
-```{r echo=FALSE}
+```{r}
 print(table1, quote = FALSE, noSpaces = TRUE)
 ```
+As we can see that the categorical variables are displayed with their factor percentage, and the continuous variables are displayed with their mean and standard deviation. 
 
-Here's the descriptive Statistics of Birth weight Analysis Data set:
+Here are some key observations from the descriptive statistics of original birth weight data set:
 
-```{r echo=FALSE}
+- **39.9 percent** of the mothers in the dataset smoked during pregnancy with the average age of the mothers being around **26.4 years**.
+
+- **38.5 percent** of the children were first-order births, **38.7 percent** were second-order births, **20.2 percent** were third-order, and **2.7 percent** were fourth-order births.
+
+- The average birth weight of the children was around **2839.49 grams** with a standard deviation of 688.37 grams.
+
+- The average systolic blood pressure before pregnancy was around **122.93 mmHg** with a standard deviation of 15.07 mmHg.
+
+- **11.3 percent** of the children were born preterm and **15.2 percent** of the children required neonatal care.
+
+
+Here's the Descriptive Statistics of Birth weight Analysis Data set, after categorizing the birth weight as low if it is below 2500 grams and high systolic blood pressure as high_bp if it is above 135 mmHg:
+
+```{r}
 print(table2, quote = FALSE, noSpaces = TRUE)
 ```
 
-As we can see that the categorical variables are converted to factors, and the continuous variables are displayed with their mean and standard deviation. Here are some key observations from the descriptive statistics:
+Here are some key observations from the descriptive statistics of birth weight analysis data set after removing the presence of NA values in the dataset:
 
--   40 percent of the mothers in the dataset smoked during pregnancy with the average age of the mothers being around 26 years.
--   77.2 percent of mothers were having either their first or second born child.
--   The average birth weight of the children is around 2840.11 grams, i.e., 31.1 percent of the children are born with low birth weight.
--   The factorization has helped with the inference that 25.1 percent of the mothers had high blood pressure before pregnancy.
--   11.3 percent of the children were born preterm and 15.2 percent of the children required neonatal care.
+- **39.9 percent** of the mothers in the dataset smoked during pregnancy with the average age of the mothers being around **26.38 years**.
 
-## Data Cleanup:
+- **38.4 percent** of the children were first-order births, **38.8 percent** were second-order births, **20 percent** were third-order, and **2.7 percent** were fourth-order births.
 
--   The variable id was a sequence number randomly assigned to each woman, and is removed as it is not relevant for the analysis.
--   The variable wt_moth was also removed as it was not relevant for the analysis.
--   The data was cleaned to remove any missing values and ensure that the data is ready for analysis.
+- **31.2** percent of the children are born with low birth weight.
 
-### Code:
+- **25.2** percent of the mothers had high systolic blood pressure before pregnancy.
 
-```{r}
-# Remove the id and wt_moth variables
-birthweight_analysis <- birthweight_analysis[, -c(4, 6)]
-# Remove any NA values
-birthweight_analysis <- na.omit(birthweight_analysis)
-```
+- **11.4** percent of the children were born preterm and **15.3** percent of the children required neonatal care.
+
+The descriptive statistics provide a comprehensive overview of the dataset, highlighting the distribution of variables and key characteristics of the study population. 
+
+Now, to gain a deeper understanding of the relationships between variables, we will construct a Directed Acyclic Graph (DAG) based on the available literature and domain knowledge, to identify the causal relationships between smoking during pregnancy and low birth weight in children.
 
 ## DAG: Directed Acyclic Graph
 
 The Directed Acyclic Graph (DAG) is a graphical representation of the causal relationships between variables in the dataset.
 
-## Motivation for the DAG:
+### Motivation for the DAG:
 
 The DAG is used to establish the total causal effect of smoking during pregnancy on the risk of low birth weight in children with covariates: maternal age, birth order, high systolic blood pressure before pregnancy, preterm birth, and neonatal care.
 
 The DAG is constructed based on the following motivations:
 
-**1. Smoke** $\rightarrow$ **Low Birth Weight:** Maternal smoking in pregnancy was significantly associated with a higher risk of Low Birth Weight in offspring on a global scale. The risk of maternal smoking on infant LBW seems to be increasing over time, and was higher with longer smoking duration throughout pregnancy and more cigarettes smoked daily.[@di2022]
+**1. Smoke $\rightarrow$ Low Birth Weight:** Maternal smoking in pregnancy was significantly associated with a higher risk of Low Birth Weight in offspring on a global scale. The risk of maternal smoking on infant LBW seems to be increasing over time, and was higher with longer smoking duration throughout pregnancy and more cigarettes smoked daily.[@di2022]
 
-**2. Age** $\rightarrow$ **Low Birth Weight:** Both young maternal age ($<$ 20 years) and advanced maternal age ($>=$ 35 years) are associated with a higher risk of LBW due to biological and socio-economic factors showing a U-shaped relationship. Young mothers may experience nutritional deficiencies and inadequate prenatal care, while older mothers face risks such as placental insufficiency and pregnancy complications. [@reichman1997]
+**2. Age $\rightarrow$ Low Birth Weight:** Both young maternal age ($<$ 20 years) and advanced maternal age ($>=$ 35 years) are associated with a higher risk of LBW due to biological and socio-economic factors showing a U-shaped relationship. Young mothers may experience nutritional deficiencies and inadequate prenatal care, while older mothers face risks such as placental insufficiency and pregnancy complications. [@reichman1997]
 
-**3. High BP** $\rightarrow$ **Low Birth Weight:** Pre-pregnancy high systolic blood pressure is inversely associated with offspring birth weight, with higher blood pressure linked to smaller babies for gestational age. This suggests that maternal cardiovascular risk factors, even before conception, can influence fetal growth and may have long-term implications for both maternal and offspring health. [@romundstad2007]
+**3. High BP $\rightarrow$ Low Birth Weight:** Pre-pregnancy high systolic blood pressure is inversely associated with offspring birth weight, with higher blood pressure linked to smaller babies for gestational age. This suggests that maternal cardiovascular risk factors, even before conception, can influence fetal growth and may have long-term implications for both maternal and offspring health. [@romundstad2007]
 
-**4. Preterm** $\rightarrow$ **Low Birth Weight:** Preterm birth (delivery before 37 weeks of gestation) is one of the strongest predictors of LBW because preterm infants have insufficient time for optimal growth in uterus. Most preterm infants weigh less than 2500 grams at birth, primarily due to their shorter gestation period. [@goldenberg2008]
+**4. Preterm $\rightarrow$ Low Birth Weight:** Preterm birth (delivery before 37 weeks of gestation) is one of the strongest predictors of LBW because preterm infants have insufficient time for optimal growth in uterus. Most preterm infants weigh less than 2500 grams at birth, primarily due to their shorter gestation period. [@goldenberg2008]
 
-**5. Age** $\rightarrow$ **Smoke:** Smoking during pregnancy is more prevalent in younger mothers ($<$ 20 years) and is associated with higher rates of low birth weight and preterm birth. Younger mothers ($<$ 20 years) are more likely to smoke during pregnancy due to socio-economic factors such as stress, lack of education, and lower healthcare access. Older mothers ($>=$ 35 years) are less likely to smoke during pregnancy, but may have other risk factors for adverse birth outcomes.[@Cnattingius2004]
+**5. Age $\rightarrow$ Smoke:** Smoking during pregnancy is more prevalent in younger mothers ($<$ 20 years) and is associated with higher rates of low birth weight and preterm birth. Younger mothers ($<$ 20 years) are more likely to smoke during pregnancy due to socio-economic factors such as stress, lack of education, and lower healthcare access. Older mothers ($>=$ 35 years) are less likely to smoke during pregnancy, but may have other risk factors for adverse birth outcomes.[@Cnattingius2004]
 
-**6. Smoke** $\rightarrow$ **Preterm:** Smoking during pregnancy is associated with an increased risk of preterm birth, with stronger effects observed for heavy smoking and exposure in late pregnancy. Passive smoking also increases the risk of early preterm birth. Quitting smoking during pregnancy is associated with improved birth outcomes compared to continued smoking. [@jaddoe2008]
+**6. Smoke $\rightarrow$ Preterm:** Smoking during pregnancy is associated with an increased risk of preterm birth, with stronger effects observed for heavy smoking and exposure in late pregnancy. Passive smoking also increases the risk of early preterm birth. Quitting smoking during pregnancy is associated with improved birth outcomes compared to continued smoking. [@jaddoe2008]
 
-**7. Age** $\rightarrow$ **Preterm:** Maternal age shows a U-shaped relationship with preterm birth risk, with the highest risks observed in mothers under 15 years (relative risk 1.569) and above 34 years (relative risk 1.572). The risk increases steeply for women over 40, with most preterm births among older mothers being “late” preterms (34–36 weeks). Women aged 20–34 have the lowest risk, serving as the control group. [@mousiolias2012]
+**7. Age $\rightarrow$ Preterm:** Maternal age shows a U-shaped relationship with preterm birth risk, with the highest risks observed in mothers under 15 years (relative risk 1.569) and above 34 years (relative risk 1.572). The risk increases steeply for women over 40, with most preterm births among older mothers being “late” preterms (34–36 weeks). Women aged 20–34 have the lowest risk, serving as the control group. [@mousiolias2012]
 
-**8. Birth** $\rightarrow$ **Preterm:** Birth order (parity) affects the likelihood of preterm birth. First pregnancies (primiparity) are associated with a higher risk of preterm birth due to biological factors and uterine readiness. In contrast, higher parity (multiple previous births) may also increase the risk due to uterine overdistension or scarring. [@Ananth2006]
+**8. Birth $\rightarrow$ Preterm:** Birth order (parity) affects the likelihood of preterm birth. First pregnancies (primiparity) are associated with a higher risk of preterm birth due to biological factors and uterine readiness. In contrast, higher parity (multiple previous births) may also increase the risk due to uterine overdistension or scarring. [@Ananth2006]
 
-**9. High BP** $\rightarrow$ **Neocare and High BP** $\rightarrow$ **PreTerm:** High BP prior to or in early pregnancy was associated with adverse pregnancy outcomes and neonatal outcomes. High blood pressure before pregnancy increases the odds of preterm birth by 1.66 times and neonatal intensive care unit admission by 1.22 times. [@jin2023]
+**9. High BP $\rightarrow$ Neocare** and **High BP $\rightarrow$ PreTerm:** High BP prior to or in early pregnancy was associated with adverse pregnancy outcomes and neonatal outcomes. High blood pressure before pregnancy increases the odds of preterm birth by 1.66 times and neonatal intensive care unit admission by 1.22 times. [@jin2023]
 
-**10. Low** $\rightarrow$ **Neocare and Preterm** $\rightarrow$ **Neocare:** Low birth weight is identified as the most critical factor contributing to neonatal mortality, accounting for 10% of deaths globally and necessitating specialized neonatal care for survival. Among LBW neonates, complications such as congenital anomalies (34%) and birth asphyxia (14%) further highlight the direct link between LBW and the need for neonatal care. However, Preterm neonates (gestational age $<$ 37 weeks) had significantly higher mortality rates (32.5%) compared to term small-for-gestational-age neonates (18.9%). This highlights the vulnerability of preterm infants to complications like prematurity-related issues (43%), necessitating intensive neonatal care. [@dsa2016]
+**10. Low $\rightarrow$ Neocare** and **Preterm $\rightarrow$ Neocare:** Low birth weight is identified as the most critical factor contributing to neonatal mortality, accounting for 10% of deaths globally and necessitating specialized neonatal care for survival. Among LBW neonates, complications such as congenital anomalies (34%) and birth asphyxia (14%) further highlight the direct link between LBW and the need for neonatal care. However, Preterm neonates (gestational age $<$ 37 weeks) had significantly higher mortality rates (32.5%) compared to term small-for-gestational-age neonates (18.9%). This highlights the vulnerability of preterm infants to complications like prematurity-related issues (43%), necessitating intensive neonatal care. [@dsa2016]
 
-**11. Age** $\rightarrow$ **High BP:** Maternal age is positively associated with high systolic blood pressure before pregnancy, with an accelerated rise in systolic blood pressure observed as women age. This age-related increase is further exacerbated by menopause, contributing to heightened cardiovascular risks in middle-aged and elderly women. [@rosenthal2000]
+**11. Age $\rightarrow$ High BP:** Maternal age is positively associated with high systolic blood pressure before pregnancy, with an accelerated rise in systolic blood pressure observed as women age. This age-related increase is further exacerbated by menopause, contributing to heightened cardiovascular risks in middle-aged and elderly women. [@rosenthal2000]
 
-**12. Smoke** $\rightarrow$ **Neocare:** Maternal smoking during pregnancy is associated with a significant decrease in birthweight, with a stronger effect observed in boys compared to girls. Infants exposed to prenatal smoking are more likely to have low birthweight and require neonatal intensive care, highlighting the need for prenatal counseling to reduce smoking during pregnancy. [@tayie2012]
+**12. Smoke $\rightarrow$ Neocare:** Maternal smoking during pregnancy is associated with a significant decrease in birthweight, with a stronger effect observed in boys compared to girls. Infants exposed to prenatal smoking are more likely to have low birthweight and require neonatal intensive care, highlighting the need for prenatal counseling to reduce smoking during pregnancy. [@tayie2012]
 
-**13. Age** $\rightarrow$ **Birth:** Maternal age is inversely associated with birth order, with younger mothers more likely to have higher birth orders due to earlier childbearing. This relationship is influenced by socio-economic factors, cultural norms, and fertility preferences, with younger mothers often having more children compared to older mothers. The birth order will not affect the maternal age, but the maternal age will affect the birth order.
+**13. Age $\rightarrow$ Birth:** Maternal age is inversely associated with birth order, with younger mothers more likely to have higher birth orders due to earlier childbearing. This relationship is influenced by socio-economic factors, cultural norms, and fertility preferences, with younger mothers often having more children compared to older mothers. The birth order will not affect the maternal age, but the maternal age will affect the birth order.
 
-**14. Birth** $\rightarrow$ **Low:** First-order births are associated with a higher incidence of low birth weight compared to higher-order births, regardless of maternal age, with 60.45% of first-order births being low birth weight versus 48.79% for higher orders. This suggests that birth order influences birth weight, with subsequent births generally having a lower risk of low birth weight. [@nmaitrabpatelmhazra1995]
+**14. Birth $\rightarrow$ Low:** First-order births are associated with a higher incidence of low birth weight compared to higher-order births, regardless of maternal age, with 60.45% of first-order births being low birth weight versus 48.79% for higher orders. This suggests that birth order influences birth weight, with subsequent births generally having a lower risk of low birth weight. [@nmaitrabpatelmhazra1995]
 
 Absence of arrows between the following is explained by the lack of direct causal relationship between them:
 
@@ -135,9 +176,9 @@ Absence of arrows between the following is explained by the lack of direct causa
 
 **3. Birth and Smoke:** There may be no direct relationship between birth order and maternal smoking during pregnancy because smoking behavior is more likely influenced by individual factors such as socioeconomic status, education level, stress, and cultural norms, rather than the number of children a woman has. Birth order itself does not inherently impact a mother’s decision to smoke.
 
-**8. Age and Neocare:** Maternal age does not contribute significantly to major morbidity of preterm neonates at discharge from neonatal intensive care. [@eventov-friedman2015]
+**4. Age and Neocare:** Maternal age does not contribute significantly to major morbidity of preterm neonates at discharge from neonatal intensive care. [@eventov-friedman2015]
 
-**9. Birth and Neocare:** Neonatal care and birth order are not directly related because the observed variations in neonatal outcomes with birth order, such as neonatal death rates, are largely influenced by confounding factors like maternal age, parity-related biological changes, and individual susceptibility to adverse outcomes, rather than birth order itself. These effects are intertwined and cannot solely be attributed to the order of the child. [@james1970]
+**5. Birth and Neocare:** Neonatal care and birth order are not directly related because the observed variations in neonatal outcomes with birth order, such as neonatal death rates, are largely influenced by confounding factors like maternal age, parity-related biological changes, and individual susceptibility to adverse outcomes, rather than birth order itself. These effects are intertwined and cannot solely be attributed to the order of the child. [@james1970]
 
 ### Code:
 
@@ -266,7 +307,7 @@ This ensures proper estimation of the total causal effect of smoking on low birt
 
 Let us test the logistic regression model to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight in children, adjusting for maternal age and high systolic blood pressure before pregnancy.
 
-Logistic regression model formula: low ~ smoke + age + high_bp
+Logistic regression model formula: $low \sim smoke + age + high\_bp$
 
 ```{r}
 # Build the logistic regression model
@@ -278,12 +319,21 @@ summary(model)
 exp(cbind(Odds_Ratio = coef(model), confint(model)))
 ```
 
-#### Interpretation:
+#### Interpretation of Odds Ratios and 95% Confidence Intervals:
 
+- The **odds ratio for smoking during pregnancy is 2.36**, indicating that the odds of low birth weight are 2.36 times higher for children born to mothers who smoke during pregnancy compared to non-smokers, adjusting for maternal age and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (1.59, 3.51), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00002 (< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
+
+- The **odds ratio for middle-aged mothers (20-34 years) is 1.44**, suggesting that the odds of low birth weight are 1.44 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.78, 2.8) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.261 ( > 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+
+- The **odds ratio for old-aged mothers ($>=$ 35 years) is 1.89**, suggesting that the odds of low birth weight are 1.89 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking and high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (0.85, 4.32) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.124 ( > 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+
+- The **odds ratio for high systolic blood pressure before pregnancy is 0.765**, suggesting that the odds of low birth weight are 0.765 times lower for mothers with high blood pressure compared to mothers without high blood pressure, adjusting for smoking and maternal age. The 95% confidence interval for the odds ratio is (0.47, 1.21) includes 1, indicating that the effect of high blood pressure on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.262 ( > 0.05) which indicates that the effect of high blood pressure is not statistically significant at 5 % level of significance.
+
+--- 
 
 Now, let us check the logistic regression model to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight in children, adjusting for maternal age.
 
-Logistic regression model formula: low ~ smoke + age
+Logistic regression model formula: $low \sim smoke + age$
 
 ```{r}
 # Build the logistic regression model
@@ -295,12 +345,19 @@ exp(cbind(Odds_Ratio = coef(model2), confint(model2)))
 ```
 
 
-#### Interpretation:
+#### Interpretation of Odds Ratios and 95% Confidence Intervals:
 
+- The **odds ratio for smoking during pregnancy is 2.31**, indicating that the odds of low birth weight are 2.31 times higher for children born to mothers who smoke during pregnancy compared to non-smokers, adjusting for maternal age. The 95% confidence interval for the odds ratio is (1.55, 3.43), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00003 (< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
+
+- The **odds ratio for middle-aged mothers (20-34 years) is 1.44**, suggesting that the odds of low birth weight are 1.44 times lower for middle-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking. The 95% confidence interval for the odds ratio is (0.78, 2.8) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.258 ( > 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+
+- The **odds ratio for old-aged mothers ($>=$ 35 years) is 1.98**, suggesting that the odds of low birth weight are 1.98 times higher for old-aged mothers compared to young mothers ($<$ 20 years), adjusting for smoking. The 95% confidence interval for the odds ratio is (0.89, 4.5) includes 1, indicating that the effect of age on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.097 ( > 0.05) which indicates that the effect of age is not statistically significant at 5 % level of significance.
+
+---
 
 Now, let us check the logistic regression model to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight in children, adjusting for high systolic blood pressure before pregnancy.
 
-Logistic regression model formula: low ~ smoke + high_bp
+Logistic regression model formula: $low \sim smoke + high\_bp$
 
 ```{r}
 # Build the logistic regression model
@@ -311,12 +368,17 @@ summary(model3)
 exp(cbind(Odds_Ratio = coef(model3), confint(model3)))
 ```
 
-#### Interpretation:
+#### Interpretation of Odds Ratios and 95% Confidence Intervals:
 
+- The **odds ratio for smoking during pregnancy is 2.34**, indicating that the odds of low birth weight are 2.34 times higher for children born to mothers who smoke during pregnancy compared to non-smokers, adjusting for high systolic blood pressure before pregnancy. The 95% confidence interval for the odds ratio is (1.58, 3.48), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00002 (< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
+
+- The **odds ratio for high systolic blood pressure before pregnancy is 0.739**, suggesting that the odds of low birth weight are 0.739 times lower for mothers with high blood pressure compared to mothers without high blood pressure, adjusting for smoking. The 95% confidence interval for the odds ratio is (0.46, 1.17) includes 1, indicating that the effect of high blood pressure on low birth weight is not statistically significant in this model. This is also suggested by the p-value of 0.203 ( > 0.05) which indicates that the effect of high blood pressure is not statistically significant at 5 % level of significance.
+
+---
 
 Finally, let us check the logistic regression model to estimate the total causal effect of smoking during pregnancy on the risk of low birth weight in children without adjusting for any covariates.
 
-Logistic regression model formula: low ~ smoke
+Logistic regression model formula: $low \sim smoke$
 
 ```{r}
 # Build the logistic regression model
@@ -327,12 +389,18 @@ summary(model4)
 exp(cbind(Odds_Ratio = coef(model4), confint(model4)))
 ```
 
-#### Interpretation:
+#### Interpretation of Odds Ratios and 95% Confidence Intervals:
+
+- The **odds ratio for smoking during pregnancy is 2.28**, indicating that the odds of low birth weight are 2.28 times higher for children born to mothers who smoke during pregnancy compared to non-smokers. The 95% confidence interval for the odds ratio is (1.54, 3.39), suggesting a statistically significant association between smoking and low birth weight. This is supported by the p-value of 0.00003 (< 0.05), indicating a significant effect of smoking on low birth weight at a 5% level of significance.
 
 
 ## Conclusion:
 
+The logistic regression analysis was conducted to address the research question: *Does smoking during pregnancy have a causal effect on the risk of the child being born with low birth weight (below 2500 grams)?*
 
+The results from all four models consistently show that smoking during pregnancy significantly increases the risk of low birth weight in children. After adjusting for confounders like maternal age and pre-pregnancy systolic blood pressure, the odds of low birth weight were found to be approximately 2.3 as high for children born to mothers who smoked during pregnancy. These findings underscore the importance of smoking cessation interventions during pregnancy to reduce the risk of adverse birth outcomes. 
+
+The inclusion of covariates in the model helps to estimate the total causal effect of smoking on low birth weight while accounting for potential confounding factors. The results provide valuable insights for public health initiatives aimed at improving maternal and child health outcomes.
 
 
 # References
